<resources>
    <string name="app_name">MEMO</string>
    <string name="logIn">Iniciar Sesión</string>
    <string name="signIn">Registrarse</string>
    <string name="story">Historias</string>
    <string name="Collection">Colección</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_storys">Historias</string>
    <string name="menu_newStorys">Crear Historia</string>
    <string name="menu_editStorys">Editar</string>
    <string name="logOut">Cerrar Sesión</string>
    <string name="toDo">Funciones por desarrollar</string>
    <string name="friends">Amigos</string>
    <string name="chat">Chat</string>
    <string name="market">Tienda</string>
    <string name="restauradores">Restauradores</string>
    <string name="profile">Perfil</string>

    <string name="storyTitle">Título de la Historia</string>
    <string name="selectFoto">Elegir Foto</string>
    <string name="takeFoto">Sacar Foto</string>
    <string name="storyDesc">Historia</string>
    <string name="upload">Subir Historia</string>
    <string name="mail">E-Mail</string>
    <string name="passworwd">Contraseña</string>
    <string name="Registration">Registro de Usuario</string>
    <string name="UserNickname">Nombre de usaurio</string>
    <string name="Comments">Comentarios</string>
    <string name="UpdateStory">Guardar Historia</string>
    <string name="MakeComment">Escribe un Comentario</string>
    <string name="PublicComent">publicar</string>

</resources>