<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.newStory.newStoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storyTitle" />

            <EditText
                android:id="@+id/editTextTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/storyTitle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonElegirFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/selectFoto" />

                <Button
                    android:id="@+id/buttonSacarFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/takeFoto" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewStorys"
                android:layout_width="wrap_content"
                android:layout_height="244dp"
                android:src="@drawable/product_example" />

            <TextView
                android:id="@+id/textViewHistoriaDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/storyDesc" />

            <EditText
                android:id="@+id/editTextTextMultiLineDEscHistoria"
                android:layout_width="match_parent"
                android:layout_height="336dp"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/storyDesc"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/buttonUpload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/upload" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>