<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserSignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="35dp"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textViewRegistroUsuario"
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:gravity="center"
            android:text="@string/Registration"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_email_24" />

            <EditText
                android:id="@+id/editTextNewUserEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:autofillHints="@string/UserNickname"
                android:ems="10"
                android:hint="@string/mail"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_baseline_lock_24" />

            <EditText
                android:id="@+id/editTextNewUserPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints="@string/UserNickname"
                android:hint="@string/passworwd"/>
        </LinearLayout>

        <Button
            android:id="@+id/buttonRegisterNewUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="90dp"
            android:background="@color/colorPrimary"
            android:text="@string/signIn"
            android:textColor="@color/colorWhite" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>