<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserLogInActivity"
    android:background="@drawable/memo_background">

    <EditText
        android:id="@+id/editTextUserMail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/mail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.569"
        tools:layout_editor_absoluteX="100dp"
        android:autofillHints="@string/mail" />

    <EditText
        android:id="@+id/editTextUserPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="45dp"
        android:ems="10"
        android:hint="@string/passworwd"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.704"
        tools:layout_editor_absoluteX="45dp"
        android:autofillHints="@string/passworwd" />

    <Button
        android:id="@+id/buttonUserLogIn"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_margin="45dp"
        android:background="@color/colorPrimary"
        android:text="@string/logIn"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.928"
        tools:layout_editor_absoluteX="44dp" />
</androidx.constraintlayout.widget.ConstraintLayout>